--- a/jsgui.css
+++ b/jsgui.css
@@ -55,6 +55,7 @@ span:hover > .selfLink {
   color: var(--blue);
 }
 .icon {
+  box-sizing: content-box;
   font-size: 1.5em;
   line-height: 1;
   width: 1em;
