--- a/jsgui.css
+++ b/jsgui.css
@@ -1,7 +1,12 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
 body {
   margin: 0;
   font-family: var(--fontFamily-sans);
   font-size: var(--fontSize-normal);
+  background: rgb(255, 255, 255);
   color: var(--gray);
   --fontFamily-sans: "Roboto", "Helvetica", "Arial", sans-serif;
   --fontFamily-serif: Times, 'Times New Roman', serif;
@@ -27,13 +32,10 @@ body {
   --iconPadding-bigger-1: 4px 5px 5px 4px;
   --iconPadding-bigger-2: 7px 8px 8px 7px;
   /* end generated */
-  --gray: rgb(0, 0, 0);
-  --gray-1: rgba(0, 0, 0, 0.7);
-  --gray-2: rgba(0, 0, 0, 0.4);
-  --gray-3: rgba(0, 0, 0, 0.1);
-  --lightGray: rgba(0, 0, 0, 0.874);
-  --lightGray-1: rgba(0, 0, 0, 0.574);
-  --lightGray-2: rgba(0, 0, 0, 0.274);
+  --gray: rgba(0, 0, 0, 0.874);
+  --gray-1: rgba(0, 0, 0, 0.437);
+  --gray-2: rgba(0, 0, 0, 0.218);
+  --gray-3: rgba(0, 0, 0, 0.109);
   --blue: rgb(20, 80, 160);
   --blue-1: rgba(20, 80, 160, 0.7);
   --blue-2: rgba(20, 80, 160, 0.4);
@@ -227,4 +229,5 @@ span:hover > .selfLink {
 }
 .pageContent {
   padding: 8px;
+  flex: 1;
 }
