--- a/docs.css
+++ b/docs.css
@@ -1,7 +1,16 @@
 .displayRow {
-  padding: 0 8px;
   display: flex;
   align-items: center;
+  padding: 0 8px;
   gap: 8px;
-  border-radius: 4px;
+  border-radius: 8px;
+}
+.wideDisplayRow {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8px;
+  gap: 8px;
+  border-radius: 8px;
 }
