--- a/jsgui.css
+++ b/jsgui.css
@@ -151,12 +151,17 @@ dialog::backdrop {
   position: relative;
 }
 .popup {
+  width: 100vw;
+  max-width: unset;
   position: absolute;
   top: 0;
   left: 0;
   padding: 0;
   margin: 0;
   border: none;
+  outline: none;
+  box-shadow: none;
+  background: transparent;
 }
 .popup[data-show="false"] {
   overflow: hidden;
@@ -166,7 +171,12 @@ dialog::backdrop {
   overflow: visible;
   height: auto;
 }
+.popup[data-mouse="true"] {
+  pointer-events: none;
+  user-select: none;
+}
 .popupContentWrapper {
+  width: fit-content;
   border-radius: 8px;
   padding: 4px 8px;
   background: lightgray; /* TODO: background color */
