--- a/docs.css
+++ b/docs.css
@@ -5,6 +5,14 @@
   gap: 8px;
   border-radius: 8px;
 }
+.displayColumn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 0 8px;
+  gap: 0;
+  border-radius: 8px;
+}
 .wideDisplayRow {
   width: 100%;
   display: flex;
