--- a/jsgui.css
+++ b/jsgui.css
@@ -57,6 +57,7 @@ body {
   line-height: 1;
   transition: color 0.1s var(--timing-0d);
 }
+/* css utils */
 [data-size="small"] {
   --fontSize-x: var(--fontSize-small);
   --iconSize-x: var(--iconSize-small);
@@ -77,17 +78,42 @@ body, [data-size="normal"] {
   --iconSize-x: var(--iconSize-bigger);
   --size-x: var(--size-bigger);
 }
+.ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+[data-line-clamp] {
+  overflow: hidden;
+  display: -webkit-inline-box;
+  -webkit-box-orient: vertical;
+}
+[data-line-clamp="1"] {
+  line-clamp: 1;
+  -webkit-line-clamp: 1;
+}
+[data-line-clamp="2"] {
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+}
+[data-line-clamp="3"] {
+  line-clamp: 3;
+  -webkit-line-clamp: 3;
+}
+@keyframes spin-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* basic components */
 span, a, button {
   display: inline-block; /* fix ellipsis */
   font-size: var(--fontSize-x);
   line-height: var(--size-x);
   vertical-align: top; /* fix inline-block */
-}
-.ellipsis {
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 a {
   color: var(--secondary);
@@ -127,14 +153,6 @@ a.icon {
 .loadingSpinner {
   color: var(--secondary);
   animation: 2s linear 0s infinite normal none running spin-animation;
-}
-@keyframes spin-animation {
-  0% {
-    transform: rotate(0deg);
-  }
-  100% {
-    transform: rotate(360deg);
-  }
 }
 dialog {
   outline: none;
