--- a/docs/docs.css
+++ b/docs/docs.css
@@ -30,3 +30,13 @@
   gap: 8px;
   border-radius: 8px;
 }
+.wideDisplayColumn {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  padding: 0 8px;
+  gap: 4px;
+  border-radius: 8px;
+}
