--- a/docs/docs.css
+++ b/docs/docs.css
@@ -1,19 +1,19 @@
 /* nav menu */
-.navMenu {
+.nav-menu {
   padding: 2px 4px;
 }
-.navMenu .divider {
+.nav-menu .divider {
   margin-block: 2px;
 }
 /* docs */
-.displayRow {
+.display-row {
   display: flex;
   align-items: center;
   padding: 0 8px;
   gap: 8px;
   border-radius: 8px;
 }
-.displayColumn {
+.display-column {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -21,7 +21,7 @@
   gap: 0;
   border-radius: 8px;
 }
-.wideDisplayRow {
+.wide-display-row {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -30,7 +30,7 @@
   gap: 8px;
   border-radius: 8px;
 }
-.wideDisplayColumn {
+.wide-display-column {
   width: 100%;
   display: flex;
   flex-direction: column;
