--- a/jsgui/jsgui.css
+++ b/jsgui/jsgui.css
@@ -461,6 +461,8 @@ dialog::backdrop {
   text-align: center;
   user-select: none;
   cursor: pointer;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 .tabs-option:first-child {
   padding-left: 8px;
